Add a new style for NoActionBar
Apply to login and signup view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,12 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"></activity>
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".SignupActivity"
+                android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity android:name=".LoginActivity"
+                android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
