--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
             buildConfigField("String","APP_CENTER_KEY","\"${System.env.APP_CENTER_KEY}\"")
         }
         debug {
+            /*
             // Creates a variable called keystorePropertiesFile, and initializes it to the keystore.properties file.
             def keystorePropertiesFile = rootProject.file("keystore.properties")
             // Initializes a new Properties() object called keystoreProperties.
@@ -32,6 +33,8 @@ android {
             keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
             buildConfigField("String","APP_CENTER_KEY", keystoreProperties['APP_CENTER_KEY'])
+            */
+            buildConfigField("String","APP_CENTER_KEY","\"${System.env.APP_CENTER_KEY}\"")
         }
     }
 
