Check keystore file is exist or not to avoid cloud platform build error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,17 @@ android {
         debug {
             // Creates a variable called keystorePropertiesFile, and initializes it to the keystore.properties file.
             def keystorePropertiesFile = rootProject.file("keystore.properties")
-            // Initializes a new Properties() object called keystoreProperties.
-            def keystoreProperties = new Properties()
-            // Loads the keystore.properties file into the keystoreProperties object.
-            keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
-            buildConfigField("String","APP_CENTER_KEY", keystoreProperties['APP_CENTER_KEY'])
+            if (keystorePropertiesFile.exists()) {
+                // Initializes a new Properties() object called keystoreProperties.
+                def keystoreProperties = new Properties()
+                // Loads the keystore.properties file into the keystoreProperties object.
+                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+                buildConfigField("String","APP_CENTER_KEY", keystoreProperties['APP_CENTER_KEY'])
+            } else {
+                buildConfigField("String", "APP_CENTER_KEY", "\"${System.env.APP_CENTER_KEY}\"")
+            }
         }
     }
 
