--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
                 // Loads the keystore.properties file into the keystoreProperties object.
                 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
-                buildConfigField("String","APP_CENTER_KEY", keystoreProperties['APP_CENTER_KEY'])
+                buildConfigField("String", "APP_CENTER_KEY", keystoreProperties['APP_CENTER_KEY'])
             } else {
                 buildConfigField("String", "APP_CENTER_KEY", "\"${System.env.APP_CENTER_KEY}\"")
             }
@@ -55,6 +55,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -65,5 +66,5 @@ dependencies {
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    compile 'com.github.gcacace:signature-pad:1.3.1'
+    implementation 'com.github.gcacace:signature-pad:1.3.1'
 }
