--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignatureActivity"></activity>
+        <activity
+            android:name=".HomeAdmActivity"
+            android:label="@string/title_activity_home_adm"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".SignatureActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
