--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ProfileActivity"></activity>
         <activity
             android:name=".HomeAdmActivity"
             android:label="@string/title_activity_home_adm"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".SignatureActivity" />
 
         <provider
@@ -49,7 +50,6 @@
         </activity>
 
         <receiver android:name=".util.NotificationPublisher" />
-
     </application>
 
 </manifest>
