--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,16 +17,39 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    // Creates a variable called keystorePropertiesFile, and initializes it to the keystore.properties file.
+    def keystorePropertiesFile = rootProject.file("keystore.properties")
+
+    signingConfigs {
+        release {
+            if (keystorePropertiesFile.exists()) {
+                def keystoreProperties = new Properties()
+                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+                storeFile rootProject.file(keystoreProperties['KEYSTORE_PATH'])
+                storePassword keystoreProperties['KEYSTORE_PASSWORD']
+                keyAlias keystoreProperties['KEY_ALIAS']
+                keyPassword keystoreProperties['KEY_PASSWORD']
+            }
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField("String", "APP_CENTER_KEY", "\"${System.env.APP_CENTER_KEY}\"")
+            signingConfig signingConfigs.release
+
+            if (keystorePropertiesFile.exists()) {
+                def keystoreProperties = new Properties()
+                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+                buildConfigField("String", "APP_CENTER_KEY", keystoreProperties['APP_CENTER_KEY'])
+            } else {
+                buildConfigField("String", "APP_CENTER_KEY", "\"${System.env.APP_CENTER_KEY}\"")
+            }
         }
         debug {
-            // Creates a variable called keystorePropertiesFile, and initializes it to the keystore.properties file.
-            def keystorePropertiesFile = rootProject.file("keystore.properties")
-
             if (keystorePropertiesFile.exists()) {
                 // Initializes a new Properties() object called keystoreProperties.
                 def keystoreProperties = new Properties()
