--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
             } else {
 
                 // For MSFT AppCenter process
-                storeFile rootProject.file('upload-keystore')
+                storeFile rootProject.file('upload-keystore.jks')
                 storePassword System.getProperty("APPCENTER_KEYSTORE_PASSWORD")
                 keyAlias System.getProperty("APPCENTER_KEY_ALIAS")
                 keyPassword System.getProperty("APPCENTER_KEY_PASSWORD")
