Make keystore file path in general

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,12 @@ android {
 
     signingConfigs {
         release {
+            storeFile rootProject.file('upload-keystore')
+
             if (keystorePropertiesFile.exists()) {
                 def keystoreProperties = new Properties()
                 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
-                storeFile rootProject.file(keystoreProperties['KEYSTORE_PATH'])
                 storePassword keystoreProperties['KEYSTORE_PASSWORD']
                 keyAlias keystoreProperties['KEY_ALIAS']
                 keyPassword keystoreProperties['KEY_PASSWORD']
